[package]
name = "rust_ledcube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
embedded-graphics = "0.8.0"
nb = "1.1.0"
panic-probe = { version = "0.3.1", features = ["rtt-target"] }
rtic = { version = "2.0.0-alpha.2", features = ["cortex-m", "thumbv7-backend", "rtic-monotonics"] }
rtic-monotonics = { version = "1.0.0-alpha.2", features = ["cortex-m-systick"] }
rtt-target = "0.4.0"
seq-macro = "0.3.3"
stm32f4xx-hal = { version = "0.16.0", features = ["stm32f407", "rtic"] }
tinybmp = "0.5.0"
tuple-iter = "0.1.0"

[profile.release]
debug = false
lto = "fat"
codegen-units = 1